# dmramfs

./: .gitignore  CMakeLists.txt  README.md  manifest.dmm
.github/workflows/: ci.yml  release.yml
_codeql_build_dir/: dmramfs  dmramfs_defs.h  dmramfs_header.c
_codeql_build_dir/dmf/: dmfsi.dmf  dmfsi_version.txt  dmramfs.dmf  dmramfs_version.txt
include/: dmramfs.h
src/: dmramfs.c
